# ui-patterns

./: CMakeLists.txt  appinfo.json
src/: main.c
src/windows/: breakfast_window.c  breakfast_window.h  dialog_choice_window.c  dialog_choice_window.h  dinner_window.c  dinner_window.h  home_on_time_window.c  home_on_time_window.h  lunch_window.c  lunch_window.h  medicine_window.c  medicine_window.h  out_of_bed_window.c  out_of_bed_window.h  say_hello_window.c  say_hello_window.h
